fix: add the wrapper cp to the systemLibs of fabric